src/objects/Aggreement__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Aggreements</relationshipLabel>
        <relationshipName>Aggreements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Dealer__c</referenceTo>
        <relationshipLabel>Aggreements</relationshipLabel>
        <relationshipName>Aggreements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NofemployeeAssigned__c</fullName>
        <label>NofemployeeAssigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Aggreement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Aggreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aggreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>